# furlang

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.githooks/: pre-commit  pre-push
furas/: CMakeLists.txt
furas/examples/: array.furas  array2.furas  ops.furas
furas/include/furas/: gen.hpp  lexer.hpp  token.hpp
furas/src/: gen.cpp  lexer.cpp  main.cpp
furc/: CMakeLists.txt
furc/include/furc/: diag.hpp  handle.hpp
furc/include/furc/ast/: declaration.hpp  expression.hpp  fwd.hpp  literal.hpp  node.hpp  program.hpp  statement.hpp  visitor.hpp
furc/include/furc/back/: furvm.hpp
furc/include/furc/front/: ir_generator.hpp  lexer.hpp  parser.hpp  post_process.hpp  ssa.hpp  token.hpp
furc/src/: ast.cpp  main.cpp
furc/src/back/: furvm.cpp  lexer.cpp
furc/src/front/: ir_generator.cpp  lexer.cpp  parser.cpp  post_process.cpp  ssa.cpp
furc/test/: lexer.cpp  parser.cpp
furlang/: CMakeLists.txt
furlang/include/furlang/: arena.hpp  furlang.hpp  result.hpp
furlang/include/furlang/ir/: block.hpp  function.hpp  instruction.hpp  module.hpp  operand.hpp
furlang/include/furlang/utility/: hash.hpp
furlang/src/: arena.cpp
furvm/: CMakeLists.txt
furvm/include/furvm/: constant.hpp  context.hpp  exceptions.hpp  executor.hpp  function.hpp  furvm.hpp  fwd.hpp  handle.hpp  instruction.hpp  module.hpp  serializer.hpp  thing.hpp  thing_allocator.hpp  type.hpp
furvm/include/furvm/detail/: handle.hpp  serialization.hpp
furvm/src/: context.cpp  executor.cpp  function.cpp  main.cpp  module.cpp  serializer.cpp  thing.cpp
furvm/src/detail/: serialization.cpp
furvm/test/: test.cpp
